--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,10 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Project0
+        </title>
+    </head>
     <body>
         <h1>HELLO WORLD!!!</h1>
     </body>
